# GenVersionWithCMake

./: CMakeLists.txt
GenerateVersionWithCMake/: CMakeLists.txt  GenerateVersionWithCMake.cpp  GenerateVersionWithCMake.h
cmake/: gitversion.cmake  gitversion.h.in
